samples/_failures_safe/1761640443_aad3c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0944fcc1.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_0944fcc1.c:143:58: error: expected ‘)’ at end of input
  143 |     while (lexer->input[lexer->position] != '\0' && lexer
      |           ~                                              ^
      |                                                          )
./samples/SAFE/__tmp_0944fcc1.c:143:5: error: expected declaration or statement at end of input
  143 |     while (lexer->input[lexer->position] != '\0' && lexer
      |     ^~~~~
